--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,6 +1,6 @@
 1. Can read from STDIN
 X. Can read from file
-3. Can load inputstream into XML Parser
+X. Can load inputstream into XML Parser
 4. Can Output the XML
 5. Can Output Json
 6. Can do an element Query <element/>
